--- a/trezello/data/tasks.json
+++ b/trezello/data/tasks.json
@@ -28,4 +28,14 @@
   "version" : 1,
   "createdAt" : "2025-10-25T22:28:44.566979600Z",
   "updatedAt" : "2025-10-25T22:28:44.566979600Z"
+}, {
+  "id" : "42278d48-2be8-4359-91a4-2f50bc4759a3",
+  "title" : "Frontemd Development",
+  "description" : "Develop and awesome TS Frontend",
+  "status" : "PENDING",
+  "category" : "School work",
+  "assigneeId" : "6d6976bf-37aa-4a7c-8715-d92318f8c611",
+  "version" : 1,
+  "createdAt" : "2025-10-26T00:11:51.283427900Z",
+  "updatedAt" : "2025-10-26T00:11:51.283427900Z"
 } ]
