--- a/trezello/data/tasks.json
+++ b/trezello/data/tasks.json
@@ -21,13 +21,13 @@
 }, {
   "id" : "39266322-93fc-4519-a80b-cb3520b3a792",
   "title" : "Play Basketball",
-  "description" : "Its good for kids to play",
+  "description" : "Its good for kids to play for fitness",
   "status" : "PENDING",
   "category" : "Exercise",
   "assigneeId" : "a51eba5d-db11-4a35-99d2-e35b04796b88",
-  "version" : 1,
+  "version" : 2,
   "createdAt" : "2025-10-25T22:28:44.566979600Z",
-  "updatedAt" : "2025-10-25T22:28:44.566979600Z"
+  "updatedAt" : "2025-10-26T02:05:40.119307800Z"
 }, {
   "id" : "42278d48-2be8-4359-91a4-2f50bc4759a3",
   "title" : "Frontemd Development",
